package decorator2;

public class Rectangle implements Shape {
    @Override public void draw() { System.out.println("Shape: Rectangle"); }
}
