package decorator2;

public interface Shape { void draw(); }
